2009-05-16 Jens Thoms Toerring    <jt@toerring.de>

	* lib/events.c: Objects consisting just of child objects
	weren't handled correctly in that they never got returned
	by fl_do_forms().

	* lib/browser.c, lib/formbrowser.c, lib/scrollbar.c,
	lib/tabfolder.c: these objects are created with a default
	callback that does nothing to keep them reported by
	fl_do_forms() (for backward compatibility reasons).
	Also quite a bit of cleanup in lib/browser.c

	* lib/spinner.c, lib/include/spinner.h, lib/private/pspinner.h:
	new widget added, very similar to counter object (but realized
	just using already existing objects).

	* lib/child.c, lib/include/Basic.h: fl_add_child() is
	am exported function now (again) since it might be
	rather useful for creating new, composite widgets.

2009-05-13 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/Makefile: Added a few include directories
	in order to allow fdesign's fd files when newly
	converted with fdesign to be compiled without
	manual changes.

2009-05-08 Jens Thoms Toerring    <jt@toerring.de>

	* lib/forms.c, lib/objects.c, lib/flinternals.h:
	Using the return key to activate a FL_RETURN_BUTTON
	object in a form with a single input object works
	again.

2009-05-08 Jens Thoms Toerring    <jt@toerring.de>

	* configure.ac: check for nanosleep too
	* lib/sysdep.c (fl_msleep): use HAVE_NONOSLEEP

2009-05-06 Jens Thoms Toerring    <jt@toerring.de>

	* lib/form.c: Changed return type of the functions
	fl_show_form(), fl_prepare_form_window() and
	fl_show_form_window() to 'Window' to reflect what
	was (mostly) said in the documentation. That also
	required including X11 header files already in
	lib/include/Basic.h instead of lib/include/XBasic.h.
	fl_prepare_form_window() now returns 'None' on
	failure instead of -1. Also the type of the 'window'
	member of the FL_FORM structure is now 'Window'
	instead of 'unsigned long' and that of 'icon_pixmap'
	and 'icon_mask' is 'Pixmap'.
